k8s/apps/network/ingress/forward-to-external.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.containo.us/middleware_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: forward2external
  namespace: ingress
spec:
  errors:
    status: 
      - "404"
    service:
      name: ingress-external-traefik
      port: 443
