k8s/apps/network/ingress/trailing-slash-middleware.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.containo.us/middleware_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: addtrailingslash
  namespace: ingress
spec:
  redirectRegex:
    regex: ^(https?://[^/]+/[a-z0-9_]+)$$
    replacement: $${1}/
    permanent: true
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.containo.us/middleware_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: ingress
spec:
  stripPrefixRegex:
    regex: 
      - /[a-z0-9_]+
