k8s/apps/network/ingress/truenas-svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: ingress
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: ingress-truenastransport@kubernetescrd
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ExternalName
  externalName: ${NAS_URL}
  ports:
    - name: https
      port: 443
    - name: minio
      port: 9000
    - name: minio-console
      port: 9001
