k8s/apps/network/ingress/dashboard-ingress.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-internal-dashboard
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: ingress-internal-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik-internal.${CLUSTER_DOMAIN}`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: api@internal
          kind: TraefikService
    - kind: Rule
      match: Host(`traefik-internal.${CLUSTER_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)
      services:
        - name: authentik-server
          namespace: authentik
          port: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-external-dashboard
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: ingress-external-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik-external.${CLUSTER_DOMAIN}`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: api@internal
          kind: TraefikService
    - kind: Rule
      match: Host(`traefik-external.${CLUSTER_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)
      services:
        - name: authentik-server
          namespace: authentik
          port: http
