k8s/apps/network/ingress/klipper-ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: klipper
  namespace: ingress
spec:
  ingressClassName: ingress-internal-traefik
  rules:
    - host: mainsail.emnt.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: klipper
                port:
                  name: http
    - host: moonracker.emnt.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: klipper
                port:
                  name: moonraker
