k8s/apps/network/ingress/opnsense-ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opnsense
  namespace: ingress
spec:
  ingressClassName: ingress-external-traefik
  rules:
    - host: opnsense.emnt.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opnsense
                port:
                  name: https
