k8s/apps/network/ingress/truenas-ingress.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: ingress
spec:
  type: ExternalName
  externalName: ${NAS_URL}
  ports:
    - name: https
      port: 443
    - name: minio
      port: 9000
    - name: minio-console
      port: 9001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas
  namespace: ingress
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "TrueNas"
    gethomepage.dev/group: "Infra"
    gethomepage.dev/icon: "truenas-scale"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
spec:
  ingressClassName: ingress-internal-traefik
  rules:
    - host: nas.emnt.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas
                port:
                  number: 443
