k8s/apps/network/ingress/network-policy.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-internal
  namespace: ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: ingress-internal-ingress
  ingress:
    - fromCIDR:
        - 192.168.0.0/16
        - 172.16.0.0/12
        - 10.0.0.0/8
        - 100.64.0.0/10
  egress:
    - toEntities:
        - cluster
